# teamspeak-admin-panel

./: .gitignore  Cargo.toml  Containerfile.fullstack  Containerfile.sidecar  LICENSE  Makefile  README.md  podman-compose.yml
crates/music-bot-audio/: Cargo.toml
crates/music-bot-audio/src/: encoder.rs  icy.rs  lib.rs  pacer.rs  pipeline.rs  resolve.rs  resolver.rs  types.rs  volume.rs  yt_resolver.py  yt_search.rs
crates/music-bot-audio/src/source/: ffmpeg.rs  icy.rs  mod.rs  synthetic.rs  url.rs
crates/music-bot-audio/tests/: fixture_pacing.rs
crates/shared/: Cargo.toml
crates/shared/src/: admin.rs  auth.rs  control.rs  dashboard.rs  flows.rs  health.rs  lib.rs  moderation.rs  music_bots.rs  servers.rs  setup.rs  test_connection.rs  video_sources.rs  widgets.rs
crates/shared/src/flows/: mod.rs  v2.rs
crates/ts6-manager-server/: Cargo.toml  Dioxus.toml
crates/ts6-manager-server/assets/: components.css  layout.css  placeholder.html  tokens.css
crates/ts6-manager-server/migrations/: 0001_baseline.surql  0002_query_bot_nickname.surql  0003_ssh_bot_nickname.surql  0004_chapter4_remaining_entities.surql  0005_ssh_bridge_auth.surql  0006_ssh_audit_log.surql  0007_video_source.surql  0008_server_last_seen_at.surql  0009_admin_audit_log.surql  0009_bot_flow_run.surql  0011_moderation.surql  0012_moderation_warn_action_kind.surql  0013_moderation_unban_action_kind.surql  0014_moderation_appeals.surql  0015_moderation_appeal_action_kinds.surql  0015_moderation_token.surql  0016_moderation_appeal_filed_action_kind.surql  0018_music_bot_runtime.surql
crates/ts6-manager-server/proptest-regressions/webquery/: escape.txt
crates/ts6-manager-server/src/: app_state.rs  audit.rs  config.rs  logging.rs  main.rs  music_bots.rs  ui.rs
crates/ts6-manager-server/src/audit/: redaction.rs  retention.rs
crates/ts6-manager-server/src/auth/: complexity.rs  extractors.rs  jwt.rs  mod.rs  password.rs  permissions.rs  refresh.rs  routes.rs  ws_handshake.rs
crates/ts6-manager-server/src/client/: api.rs  auth.rs  debug.rs  dioxus.rs  flows.rs  mod.rs  music_bots.rs  servers.rs  session.rs  settings.rs  setup.rs  storage.rs  store.rs  ui_prefs.rs  users.rs  video_sources.rs  ws.rs
crates/ts6-manager-server/src/control/: mod.rs  sidecar.rs
crates/ts6-manager-server/src/crypto/: aead.rs  kdf.rs  mod.rs
crates/ts6-manager-server/src/db/: error.rs  migrations.rs  mod.rs  tests.rs
crates/ts6-manager-server/src/flow/: automod.rs  automod_seed_tests.rs  dispatch.rs  engine.rs  engine_tests.rs  mod.rs  routes.rs  routes_tests.rs  trigger.rs
crates/ts6-manager-server/src/flow/engine/: commands.rs  expr.rs  graph.rs
crates/ts6-manager-server/src/repos/: admin_audit_log.rs  app_settings.rs  bot_execution_logs.rs  bot_executions.rs  bot_flow_runs.rs  bot_flows.rs  bot_variables.rs  mod.rs  moderation_appeals.rs  moderation_case_actions.rs  moderation_cases.rs  moderation_notes.rs  moderation_reports.rs  moderation_tokens.rs  music_bot_runtime.rs  music_bots.rs  music_requests.rs  playlist_songs.rs  playlists.rs  radio_stations.rs  refresh_tokens.rs  server_connections.rs  server_user_grants.rs  setup.rs  songs.rs  ssh_audit_log.rs  stream_sessions.rs  tests.rs  tests_chapter4.rs  user_permissions.rs  users.rs  video_sources.rs  widgets.rs
crates/ts6-manager-server/src/routes/: audit.rs  metrics.rs  mod.rs  servers.rs  settings.rs  setup.rs  users.rs
crates/ts6-manager-server/src/routes/control/: access.rs  audit.rs  bans.rs  channel_groups.rs  channels.rs  clients.rs  info.rs  logs.rs  messages.rs  mod.rs  permissions.rs  server_groups.rs  tests.rs  tokens.rs  video_sources.rs
crates/ts6-manager-server/src/routes/moderation/: actions.rs  appeals.rs  automod.rs  cases.rs  complaints.rs  history.rs  mod.rs  notes.rs  reports.rs  tests.rs  tokens.rs
crates/ts6-manager-server/src/routes/music_bots/: audio_control.rs  bots.rs  convert.rs  library.rs  mod.rs  playlists.rs  queue.rs  (+3 more)
crates/ts6-manager-server/src/sshbridge/: audit.rs  channel.rs  control_client.rs  hostkey.rs  mod.rs  retention.rs  russh_channel.rs  tofu.rs  transport.rs  wire.rs
crates/ts6-manager-server/src/ssrf/: mod.rs  resolver.rs
crates/ts6-manager-server/src/ui/: mod.rs  routes.rs  theme.rs  tokens.rs
crates/ts6-manager-server/src/web/: cors.rs  csp_nonce.rs  headers.rs  mod.rs  proxy.rs  rate_limit.rs  widget_security.rs
crates/ts6-manager-server/src/webquery/: dashboard.rs  escape.rs  mod.rs  models.rs  probe.rs  tests.rs  transport_class.rs
crates/ts6-manager-server/src/widgets/: admin.rs  cache.rs  mod.rs  png.rs  routes.rs  snapshot.rs  svg.rs  themes.rs
crates/ts6-manager-server/src/ws/: auth.rs  dashboard_tick.rs  envelope.rs  hub.rs  mod.rs  server_notify.rs  session.rs  topic.rs  video_source_tick.rs
crates/ts6-manager-server/tests/: README.md
crates/ts6-media-sidecar/: Cargo.toml  README.md
crates/ts6-media-sidecar/src/: control.rs  http.rs  http_pin.rs  lib.rs  main.rs  origin.rs  pipeline.rs  preset.rs  ssrf_resolver.rs  transport.rs
crates/ts6-media-sidecar/tests/: control_plane.rs  pipeline_two_tab_smoke.rs  smoke.rs
crates/ts6-media-sidecar/tests/fixtures/: .gitignore  build.sh
crates/ts6-ssrf/: Cargo.toml
crates/ts6-ssrf/src/: ipnorm.rs  lib.rs  ranges.rs  resolver.rs  tests.rs
crates/ts6-ssrf/tests/: r6_fuzz.rs
crates/ts6-voice-fixture/: Cargo.toml
crates/ts6-voice-fixture/src/: lib.rs  main.rs
crates/ts6-voice-fixture/tests/: audio_e2e.rs
crates/ts6-voice-prototype/: Cargo.toml
crates/ts6-voice-prototype/src/: main.rs
crates/ts6-voice-translator/: Cargo.toml
crates/ts6-voice-translator/src/: livekit.rs  main.rs  ts6.rs
crates/voice/: Cargo.toml
crates/voice/src/: audio.rs  backoff.rs  bot.rs  chat.rs  command.rs  config.rs  event.rs  lib.rs  runtime.rs  state.rs  store.rs  supervisor.rs
crates/voice/tests/: audio_e2e.rs  chat_bridge_e2e.rs  lifecycle_e2e.rs  store_e2e.rs
moq-spike/: Cargo.toml  README.md
moq-spike/fixture/: build.sh
moq-spike/player/: index.html  player.js
moq-spike/sidecar/: Cargo.toml
moq-spike/sidecar/src/: main.rs
(+180 files in other folders)
