[workspace]
resolver = "3"
members = [
    "crates/shared",
    "crates/ts6-manager-server",
    "crates/ts6-voice-fixture",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
dioxus = { version = "0.7", features = ["fullstack", "router"] }
dioxus-server = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ts6-manager-shared = { path = "crates/shared" }

# PURA-14 — auth client slice. `gloo-net` and `web-sys` are wasm-only; they
# are gated behind `cfg(target_arch = "wasm32")` in source, but the deps must
# resolve on every target so the workspace builds. `wasm-bindgen-futures`
# powers the gloo-net executor on the WASM target. `futures` is used on
# every target for the `BoxFuture` type the refresh-gate trait returns.
futures = { version = "0.3", default-features = false, features = ["std"] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Storage",
    "Window",
    "Location",
] }

# Phase 1 SECURITY (PURA-4)
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
bcrypt = "0.17"
hex = "0.4"
hickory-resolver = "0.24"
jsonwebtoken = "9"
governor = "0.6"
rand = "0.8"
scrypt = { version = "0.11", default-features = false, features = ["std"] }
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
url = "2"

# Phase 1 DATA (PURA-10) — SurrealDB v3 embedded (D8 ratified deviation 2026-05-07).
# `kv-surrealkv` is the production embedded backend; `kv-mem` powers unit tests
# without spinning up a server. The `protocol-*` features stay off so the binary
# does not pull in networking client code we are not yet using.
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv", "kv-mem"] }

# Phase 1 WEBQUERY (PURA-23) — outbound HTTP client to the per-server TS6
# WebQuery API. `rustls-tls` (no native-tls/openssl). `json` for envelope
# parsing. `default-features = false` keeps `reqwest` from pulling
# `default-tls`/openssl on top of rustls.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Phase 2 SSHBRIDGE (PURA-69 → PURA-76) — pure-Rust async SSH client.
# ADR-0001 picked russh; ADR-0001 said to pin both `russh` and
# `russh-keys`, but at 0.60 the russh maintainers absorbed the keys
# crate back into `russh::keys`, so a separate `russh-keys` line would
# pull in a stale beta. Pin the minor (`0.60` → `>=0.60.0, <0.61.0`)
# and bump deliberately. Default features `aws-lc-rs + flate2 + rsa`
# match the rustls posture (no OpenSSL) and cover every key algorithm
# we expect to encounter on operator-supplied TS6 servers.
russh = { version = "0.60", default-features = false, features = ["aws-lc-rs", "flate2", "rsa"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
