[workspace]
resolver = "3"
members = [
    "crates/music-bot-audio",
    "crates/shared",
    "crates/ts6-manager-server",
    "crates/ts6-ssrf",
    "crates/ts6-voice-fixture",
    "crates/ts6-voice-prototype",
    "crates/ts6-voice-translator",
    "crates/voice",
]
# `crates/ts6-media-sidecar/` is its OWN workspace, not a member of the
# main `teamspeak-admin-panel` workspace. PURA-139 (WS-1) attempted
# main-workspace integration first per the ticket's "Workspace
# integration" step, but `moq-native@0.14` enables `parking_lot/deadlock_detection`
# while `dioxus-server@0.7` enables `parking_lot/send_guard`, and parking_lot
# itself rejects that combination at compile time
# (`#[cfg(all(send_guard, deadlock_detection))] compile_error!`). The two
# upstreams cannot coexist in one Cargo dependency graph today; sibling-
# workspace isolation is the same containment trick `moq-spike/` uses.
# Drift control comes from re-pinning moq-lite/moq-native/hang to the
# same versions in both `moq-spike/Cargo.toml` and
# `crates/ts6-media-sidecar/Cargo.toml`. Bumping is a single-PR change
# touching both files. See ADR-0007 + crates/ts6-media-sidecar/README.md.
exclude = [
    "crates/ts6-media-sidecar",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
dioxus = { version = "0.7", features = ["fullstack", "router"] }
dioxus-server = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ts6-manager-shared = { path = "crates/shared" }
ts6-ssrf = { path = "crates/ts6-ssrf" }

# PURA-14 — auth client slice. `gloo-net` and `web-sys` are wasm-only; they
# are gated behind `cfg(target_arch = "wasm32")` in source, but the deps must
# resolve on every target so the workspace builds. `wasm-bindgen-futures`
# powers the gloo-net executor on the WASM target. `futures` is used on
# every target for the `BoxFuture` type the refresh-gate trait returns.
futures = { version = "0.3", default-features = false, features = ["std"] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json", "websocket"] }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Storage",
    "Window",
    "Location",
    "Navigator",
    "Clipboard",
    # PURA-124 WS-6 — `EventSource` + `MessageEvent` power the bot detail
    # page's SSE subscription against `/api/music-bots/{id}/events`. The
    # browser's native `EventSource` handles reconnect + last-event-id,
    # so the FE only consumes a stream of typed `BotEventWire` payloads.
    "EventSource",
    "MessageEvent",
    "Event",
    "EventTarget",
    # PURA-237 — browser CSPRNG for the admin create/edit "suggest a strong
    # password" button (`crypto.getRandomValues`, docs/admin/ui-brief.md §3.2).
    "Crypto",
    # PURA-143 WS-5 — Dioxus video player (WebTransport + WebCodecs + WebAudio).
    # The widget opens a WT session against the sidecar's QUIC listener,
    # subscribes to `<source-id>/video|audio` via moq-lite-04, decodes VP8 to a
    # `<canvas>` and Opus into the page's `AudioContext`. The Streams + Codecs
    # surface needs every reader/writer + frame/data type that mirrors the
    # WS-0 reference player (`moq-spike/player/player.js`).
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportHash",
    "WebTransportBidirectionalStream",
    "WebTransportReceiveStream",
    "WebTransportSendStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoFrame",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "AudioDecoder",
    "AudioDecoderConfig",
    "AudioDecoderInit",
    "AudioData",
    "AudioDataCopyToOptions",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "Request",
    "RequestInit",
    "Response",
    "Performance",
    "AudioSampleFormat",
    "Url",
    # PURA-224 — file picker + multipart upload for the YouTube cookie
    # settings surface. `HtmlInputElement` reads the file list off the
    # operator's `<input type=file>`, `FormData` builds the multipart body
    # the backend expects (`PUT /api/settings/youtube-cookies`, field
    # `file`), `File`/`Blob` are the value types FormData carries, and
    # `FileList` is what the input element hands back.
    "Blob",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
] }
urlencoding = "2"

# Phase 1 SECURITY (PURA-4)
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
bcrypt = "0.17"
hex = "0.4"
hickory-resolver = "0.24"
jsonwebtoken = "9"
governor = "0.6"
rand = "0.8"
scrypt = { version = "0.11", default-features = false, features = ["std"] }
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
url = "2"

# Phase 6 SECURITY (PURA-161 / R5, R7) — property-based test framework.
# `proptest` powers the ServerQuery escaper roundtrip + injection-safety
# properties and the refresh-token rotation defense-in-depth check. Dev-only;
# never enters production builds.
proptest = "1"

# Phase 1 DATA (PURA-10) — SurrealDB v3 embedded (D8 ratified deviation 2026-05-07).
# `kv-surrealkv` is the production embedded backend; `kv-mem` powers unit tests
# without spinning up a server. The `protocol-*` features stay off so the binary
# does not pull in networking client code we are not yet using.
# `wasmbind` routes `Utc::now()` through JS `Date` on wasm32 — without it the
# `clock` feature falls back to `SystemTime::now()`, which panics on
# `wasm32-unknown-unknown`. The flows UI is the first shipped client code to
# call `Utc::now()` (relative-time rendering); see PURA-246 B4.
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde", "wasmbind"] }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv", "kv-mem"] }

# Phase 1 WEBQUERY (PURA-23) — outbound HTTP client to the per-server TS6
# WebQuery API. `rustls-tls` (no native-tls/openssl). `json` for envelope
# parsing. `default-features = false` keeps `reqwest` from pulling
# `default-tls`/openssl on top of rustls.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Phase 2 SSHBRIDGE (PURA-69 → PURA-76) — pure-Rust async SSH client.
# ADR-0001 picked russh; ADR-0001 said to pin both `russh` and
# `russh-keys`, but at 0.60 the russh maintainers absorbed the keys
# crate back into `russh::keys`, so a separate `russh-keys` line would
# pull in a stale beta. Pin the minor (`0.60` → `>=0.60.0, <0.61.0`)
# and bump deliberately. Default features `aws-lc-rs + flate2 + rsa`
# match the rustls posture (no OpenSSL) and cover every key algorithm
# we expect to encounter on operator-supplied TS6 servers.
russh = { version = "0.60", default-features = false, features = ["aws-lc-rs", "flate2", "rsa"] }

# PURA-85 — `Zeroizing<String>` wraps cleartext SSH credentials
# (`RusshAuth::Password` and `RusshAuth::Key`) so the dropped allocation is
# scrubbed. `zeroize` is already in the dep tree transitively (aws-lc-rs,
# bcrypt) — adding it as a first-class workspace dep lets the SSHBridge use
# `Zeroizing<T>` directly without a re-export hack.
zeroize = "1"

# PURA-72 Slice C (PURA-88) — public widget PNG rasterisation per spec
# §27.4. `usvg` parses the Slice B SVG, `resvg` rasterises onto a
# `tiny_skia` pixmap, and the pixmap encodes itself to PNG. Default
# features are off where possible: `text` + `system-fonts` stay on so
# server name / channel name / nickname text actually renders, but
# `raster-images` (only useful for embedded `<image>` elements; the
# widget SVG has none) and `memmap-fonts` (release-only optimisation
# we can revisit if PNG latency becomes a hotspot) stay off.
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
usvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
tiny-skia = { version = "0.11", default-features = false, features = ["std", "png-format"] }

# PURA-241 — v1.1 flow engine cron trigger. `cron@0.12` parses 6-field UTC
# expressions and produces `Schedule::upcoming(Utc)` for the engine's
# trigger loop. Pure-Rust, no transitive openssl / native-tls. The
# architecture brief §10 recommended the `cron` crate; pinning the minor
# matches our convention.
cron = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
