[package]
name = "music-bot-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "music_bot_audio"
path = "src/lib.rs"

[[bin]]
name = "music-bot-audio-demo"
path = "src/bin/demo.rs"

# PURA-162 WS-Perf — sustained-load + latency smoke harness. Lives in the
# crate so it links the same pipeline/encoder code the published music-bot
# ships with. Runnable as `cargo run -p music-bot-audio --bin perf-smoke`,
# or baked into the published OCI image once WS-OPS-Images lands.
[[bin]]
name = "perf-smoke"
path = "src/bin/perf_smoke.rs"

[dependencies]
# PURA-117 WS-2 (PURA-119) — music-bot audio pipeline.
#
# Same audiopus pin the WS-4 prototype + WS-7 translator settled on
# (crates/ts6-voice-prototype, crates/ts6-voice-translator). Pre-release
# tracking upstream libopus 1.x; the crates.io version is API-stable
# enough for this product layer.
audiopus = "0.3.0-rc.0"

# Reqwest (workspace pin, rustls) for ICY radio fetches. The ICY parser
# does not need streaming bytes from a high-level client because we do the
# byte-arithmetic ourselves; reqwest::get + bytes_stream is the right shape.
reqwest = { workspace = true, features = ["stream"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "fs", "signal", "net"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hound = "3.5"
