[package]
name = "ts6-manager-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

description = "Wire-format types shared between the ts6-manager Dioxus client and axum server. WASM-clean: no native-only dependencies."

[lib]
name = "ts6_manager_shared"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
# `serde_json` is part of the public API of `flows::Action` (args carry
# dynamic JSON) and `flows::FlowRun.trigger`. Stays WASM-clean because
# `serde_json` is pure Rust without OS deps.
serde_json = { workspace = true }
