[package]
name = "ts6-manager-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

description = "Wire-format types shared between the ts6-manager Dioxus client and axum server. WASM-clean: no native-only dependencies."

[lib]
name = "ts6_manager_shared"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
# PURA-241 — `flows::Trigger` / `Action::*::args` / `FlowRun.trigger`
# carry operator-authored JSON. `serde_json` is part of the public API
# of `flows` and stays WASM-clean (pure Rust, no OS deps), so the Dioxus
# client deserialises straight into these types.
serde_json = { workspace = true }
