[package]
name = "ts6-manager-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ts6-manager-server"
path = "src/main.rs"

# PURA-17 — dx-CLI bundles a fullstack app from a single crate that has two
# build flavours, selected by feature:
#
# - `server` (default): native binary; axum router + SurrealDB + auth surface.
# - `web`: `wasm32-unknown-unknown`; dioxus-web hydration of `ui::App`.
#
# `dx-CLI` toggles these automatically:
#   - `dx serve --web`        → `--features web --target wasm32-unknown-unknown`
#   - native server build     → `--features server`
#   - `cargo run` / `cargo test` keep working because `default = ["server"]`.
#
# All server-only deps are `optional = true` so the WASM build does not pull
# in axum/tokio/surrealdb (which fail to compile on `wasm32-unknown-unknown`).
[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:anyhow",
    "dep:axum",
    "dep:dioxus-server",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:aes-gcm",
    "dep:argon2",
    "dep:async-trait",
    "dep:bcrypt",
    "dep:governor",
    "dep:hex",
    "dep:ipnet",
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:scrypt",
    "dep:sha2",
    "dep:subtle",
    "dep:thiserror",
    "dep:tower",
    "dep:tower-http",
    "dep:ts6-ssrf",
    "dep:url",
    "dep:surrealdb",
    "dep:reqwest",
    "dep:russh",
    "dep:zeroize",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:music-bot",
    "dep:tokio-stream",
    "dep:cron",
]
web = ["dioxus/web"]
# PURA-72 Slice C (PURA-88) — verification feature flag. When enabled,
# `widgets::png::rasterise` short-circuits to `Err(RasterError::Disabled)`
# without invoking `resvg`. The widget route's graceful-fallback path
# (spec §27.4) then serves the SVG bytes at the `/image.png` URL with a
# WARN log line. Tests run with `--features widget-png-disabled` to pin
# that fallback contract; default builds keep the rasteriser live.
widget-png-disabled = []

[dependencies]
# Compiles on both server and wasm targets.
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ts6-manager-shared = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# PURA-14 — auth client slice. Source code is `cfg(target_arch = "wasm32")`
# gated, so these compile cheaply on native (no network calls reachable).
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
urlencoding = { workspace = true }

# Server-only — gated by the `server` feature so the wasm32 build skips them.
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
dioxus-server = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Phase 1 SECURITY (PURA-4) — server-only.
aes-gcm = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
governor = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
ipnet = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
# Shared SSRF validator. Extracted to its own crate so the sibling-workspace
# `ts6-media-sidecar` (PURA-141) can reuse the identical logic. The
# `hickory` feature picks up the production DNS resolver here; the sidecar
# opts out and uses `tokio::net::lookup_host` for its own resolver impl.
ts6-ssrf = { workspace = true, optional = true, features = ["hickory"] }
url = { workspace = true, optional = true }

# Phase 1 DATA (PURA-10) — server-only.
surrealdb = { workspace = true, optional = true }

# Phase 1 WEBQUERY (PURA-23) — outbound HTTP client. Server-only.
reqwest = { workspace = true, optional = true }

# Phase 2 SSHBRIDGE (PURA-69 → PURA-76) — async SSH client. Server-only;
# the WASM target never opens SSH sessions.
russh = { workspace = true, optional = true }

# Phase 2 SSHBRIDGE (PURA-85) — `Zeroizing<String>` for scrubbing cleartext
# SSH credentials on drop. Server-only.
zeroize = { workspace = true, optional = true }

# PURA-72 Slice C (PURA-88) — widget PNG rasterisation. Server-only; the
# WASM build does not own a `/image.png` route. `default-features = false`
# stays at the workspace level — see the workspace Cargo.toml note for
# the precise feature subset (`text` + `system-fonts`).
resvg = { workspace = true, optional = true }
usvg = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }

# PURA-123 WS-5 — music-bot REST surface. The `music-bot` crate carries
# the supervisor + per-bot store, AND its `BotEvent` / `BotState` /
# `MusicBotStore` types we project onto the wire. Pulling it in
# transitively brings `tsclientlib` (master pin @ 04aa249) and
# `ts6-voice-fixture` — both are already in the lock file via the voice
# product crates, so the marginal compile cost on the manager-server
# build stays small.
music-bot = { path = "../voice", optional = true }
# `tokio-stream` wraps the bot's `broadcast::Receiver` into a `Stream`
# the axum SSE response can consume directly. Server-only — no WASM
# build path opens an SSE listener.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"], optional = true }

# PURA-241 v1.1 flow engine — cron-expression parser + next-tick iterator
# for the `Trigger::Cron` source. Server-only; the WASM build never runs
# the trigger loop.
cron = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
# PURA-161 (R5, R7, R8) — property-based test framework for the escaper
# property tests, refresh-token rotation defense-in-depth pass, and the
# SurrealDB error-boundary classifier. Dev-only.
proptest = { workspace = true }
# PURA-30 — chrome-snapshot tests render layout components via
# `dioxus_ssr::render_element(rsx!{...})` to pin the aria attribute
# contract. Dev-only — must NOT enter production builds.
dioxus-ssr = "0.7"
